// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Button link unchanged 1`] = `
<div>
  <a
    class="sc-3eee0409-1 iVFiHB undefined "
  >
    <span>
      button test
    </span>
  </a>
</div>
`;

exports[`Button renders form Button unchanged 1`] = `
<div>
  <button
    class="sc-3eee0409-2 jHALBG undefined "
  >
    <span>
      button test
    </span>
  </button>
</div>
`;
